--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "bryanjgomez",
   "license": "ISC",
   "dependencies": {
+    "@handlebars/allow-prototype-access": "^1.0.5",
     "concurrently": "^6.2.0",
     "connect-mongo": "^4.4.1",
     "cookie-parser": "^1.4.5",
@@ -18,6 +19,7 @@
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "express-session": "^1.17.2",
+    "handlebars": "^4.7.7",
     "mongoose": "^5.13.1",
     "nodemon": "^2.0.9",
     "shortid": "^2.2.16",
