agregando una nueva ruta y renderizando la vista de las vacante

--- a/variables.env
+++ b/variables.env
@@ -1,6 +1,6 @@
 PUERTO=4000
 NODE_ENV=development
-DATABASE=mongodb+srv://bryan:bryan@cluster0.ltqq2.mongodb.net/DevJobs
+DATABASE=mongodb+srv://bryan:gomez@cluster0.ltqq2.mongodb.net/DevJobs
 SECRETO=superSecreto
 KEY=llavesecreta
 
