--- a/package.json
+++ b/package.json
@@ -31,5 +31,13 @@
     "babel-loader": "^8.2.2",
     "webpack": "^5.42.0",
     "webpack-cli": "^4.7.2"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bryan074218/devjob.git"
+  },
+  "bugs": {
+    "url": "https://github.com/bryan074218/devjob/issues"
+  },
+  "homepage": "https://github.com/bryan074218/devjob#readme"
 }
