--- a/package.json
+++ b/package.json
@@ -12,13 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.5",
+    "bcrypt": "^5.0.1",
     "concurrently": "^6.2.0",
+    "connect-flash": "^0.1.1",
     "connect-mongo": "^4.4.1",
     "cookie-parser": "^1.4.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-handlebars": "^5.3.2",
     "express-session": "^1.17.2",
+    "express-validator": "^6.12.1",
     "handlebars": "^4.7.7",
     "mongoose": "^5.13.1",
     "nodemon": "^2.0.9",
