--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "handlebars": "^4.7.7",
     "mongoose": "^5.13.1",
     "nodemon": "^2.0.9",
+    "passport": "^0.4.1",
+    "passport-local": "^1.0.0",
     "shortid": "^2.2.16",
     "slug": "^5.1.0"
   },
