--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@handlebars/allow-prototype-access": "^1.0.5",
+    "axios": "^0.21.1",
     "bcrypt": "^5.0.1",
     "concurrently": "^6.2.0",
     "connect-flash": "^0.1.1",
@@ -28,7 +29,8 @@
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
     "shortid": "^2.2.16",
-    "slug": "^5.1.0"
+    "slug": "^5.1.0",
+    "sweetalert2": "^11.1.2"
   },
   "devDependencies": {
     "@babel/core": "^7.14.6",
