--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express-validator": "^6.12.1",
     "handlebars": "^4.7.7",
     "mongoose": "^5.13.1",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.9",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
