--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "express-session": "^1.17.2",
     "express-validator": "^6.12.1",
     "handlebars": "^4.7.7",
+    "http-error": "0.0.6",
     "mongoose": "^5.13.1",
     "multer": "^1.4.3",
+    "nodemailer": "^6.6.3",
+    "nodemailer-express-handlebars": "^4.0.0",
     "nodemon": "^2.0.9",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
